unpackaged/main/default/objects/Diversify_Provided_Service__c/Diversify_Provided_Service__c.object-meta.xml
<CustomObject>
    <label>Diversify Provided Service</label>
    <nameField>
        <displayFormat>DPS-{00000000}</displayFormat>
        <label>Diversify Provided Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diversify Provided Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>