unpackaged/main/default/objects/Diversify_Provided_Service__c/fields/Diversify_Related_Person__c.field-meta.xml
<CustomField>
    <fullName>Diversify_Related_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diversify Related Person</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Diversify Provided Services</relationshipLabel>
    <relationshipName>Diversify_Provided_Services</relationshipName>
    <type>Lookup</type>
</CustomField>