unpackaged/main/default/objects/Diversify_Provided_Service__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address associated with this software license (e.g., Salesforce, Egnyte, Microsoft). Historically used for reconciliation.</description>
    <inlineHelpText>Email address associated with this software license</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>