unpackaged/main/default/objects/Diversify_Provided_Service__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Wizard Only</fullName>
            </value>
            <value>
                <fullName>Enhanced - Department Admin</fullName>
            </value>
            <value>
                <fullName>Metadata Permissions</fullName>
            </value>
            <value>
                <fullName>Enhanced - Systems Team</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Systems</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
                <isActive>false</isActive>
                <label>Enrolled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>