unpackaged/main/default/objects/Diversify_Provided_Service__c/fields/Microsoft_License_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_License_Attributes__c</fullName>
    <label>Microsoft License Attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Microsoft 365 Business Premium</fullName>
            </value>
            <value>
                <fullName>Exchange Online (Plan 1)</fullName>
            </value>
            <value>
                <fullName>Exchange Online (Plan 2)</fullName>
            </value>
            <value>
                <fullName>Power Automate Premium</fullName>
            </value>
            <value>
                <fullName>Microsoft 365 E5 Information Protection and Governance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>