unpackaged/main/default/objects/Diversify_Provided_Service__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Egnyte</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>LastPass</fullName>
            </value>
            <value>
                <fullName>Orion Compliance</fullName>
            </value>
            <value>
                <fullName>Diversify Asset Management</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>IT Managed</fullName>
            </value>
            <value>
                <fullName>Estate Guru</fullName>
            </value>
            <value>
                <fullName>Integrated Ops</fullName>
            </value>
            <value>
                <fullName>Wealthbox</fullName>
                <isActive>false</isActive>
                <label>Wealthbox</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>