unpackaged/main/default/objects/Diversify_Provided_Service__c/fields/Zoom_License_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Zoom_License_Attributes__c</fullName>
    <label>Zoom License Attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoom Workplace Business Plus with US/CA Unlimited</fullName>
            </value>
            <value>
                <fullName>Zoom Phone</fullName>
            </value>
            <value>
                <fullName>Zoom Meetings Basic</fullName>
            </value>
            <value>
                <fullName>Zoom Workplace Business</fullName>
            </value>
            <value>
                <fullName>Zoom Webinars 500</fullName>
            </value>
            <value>
                <fullName>Zoom Rooms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>